fix global alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,10 @@
-.container {
+.app-container {
   @apply
-  flex
-  flex-col
-  items-center
-  p-4
+    flex
+    flex-col
+    justify-center
+    items-center
+    p-4
 }
 
 
